WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247370
[content-visibility] Fix content-visibility-canvas.html
https://bugs.webkit.org/show_bug.cgi?id=247370
Summary
[content-visibility] Fix content-visibility-canvas.html
Rob Buis
Reported
2022-11-02 09:55:23 PDT
Fix content-visibility-canvas.html.
Attachments
Patch
(2.35 KB, patch)
2022-11-02 09:57 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2022-11-02 09:57:17 PDT
Created
attachment 463362
[details]
Patch
Rob Buis
Comment 2
2022-11-03 07:08:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/6080
EWS
Comment 3
2022-11-04 02:45:39 PDT
Committed
256316@main
(7fecf966b582): <
https://commits.webkit.org/256316@main
> Reviewed commits have been landed. Closing PR #6080 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-11-04 02:46:18 PDT
<
rdar://problem/101952381
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug