[content-visibility] Fix content-visibility-canvas.html https://bugs.webkit.org/show_bug.cgi?id=247370

Reviewed by Alan Baradlay.

Enabling content-visibility also enables inline-size
containment, but that does not do the right thing
for computing replaced logical width, the specified
width should have priority over the inline-size
containment.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeReplacedLogicalWidth const):

Canonical link: https://commits.webkit.org/256316@main